cmake_minimum_required(VERSION 3.3.0)
project(Trilinos_Testing)

set(CMAKE_CXX_COMPILER mpicxx)
set(CMAKE_CXX_STANDARD 17)
set(TRILINOS_DIR "/home/tyson/Libraries/Trilinos/")
set(CMAKE_PREFIX_PATH "${TRILINOS_DIR}/install/lib/cmake/Trilinos" ${CMAKE_PREFIX_PATH})
#FIND_PACKAGE(Trilinos REQUIRED HINTS ${TRILINOS_DIR} ../ ../../ $ENV{TRILINOS_DIR})
find_package(Trilinos REQUIRED)
find_package(MPI REQUIRED)
# Echo trilinos build info just for fun
MESSAGE("\nFound Trilinos!  Here are the details: ")
MESSAGE("   Trilinos_DIR = ${Trilinos_DIR}")
MESSAGE("   Trilinos_VERSION = ${Trilinos_VERSION}")
MESSAGE("   Trilinos_PACKAGE_LIST = ${Trilinos_PACKAGE_LIST}")
MESSAGE("   Trilinos_LIBRARIES = ${Trilinos_LIBRARIES}")
MESSAGE("   Trilinos_INCLUDE_DIRS = ${Trilinos_INCLUDE_DIRS}")
MESSAGE("   Trilinos_LIBRARY_DIRS = ${Trilinos_LIBRARY_DIRS}")
MESSAGE("   Trilinos_TPL_LIST = ${Trilinos_TPL_LIST}")
MESSAGE("   Trilinos_TPL_INCLUDE_DIRS = ${Trilinos_TPL_INCLUDE_DIRS}")
MESSAGE("   Trilinos_TPL_LIBRARIES = ${Trilinos_TPL_LIBRARIES}")
MESSAGE("   Trilinos_TPL_LIBRARY_DIRS = ${Trilinos_TPL_LIBRARY_DIRS}")
MESSAGE("   Trilinos_BUILD_SHARED_LIBS = ${Trilinos_BUILD_SHARED_LIBS}")
MESSAGE("End of Trilinos details\n")
include_directories(${Trilinos_INCLUDE_DIRS} ${Trilinos_TPL_INCLUDE_DIRS} ${MPI_INCLUDE_PATH})
link_directories(${Trilinos_LIBRARY_DIRS} ${Trilinos_TPL_LIBRARY_DIRS} ${MPI_LIBRARY_DIRS})
# MPI check
MESSAGE("-- Checking if MPI is enabled in Trilinos:")
LIST(FIND Trilinos_TPL_LIST MPI MPI_List_ID)
IF (MPI_List_ID GREATER -1)
    MESSAGE("-- Checking if MPI is enabled in Trilinos: MPI ENABLED")
    SET(Trilinos_Testing_MPI TRUE)
    ADD_DEFINITIONS(-DTrilinos_Testing_MPI)
ELSE()
    MESSAGE("-- Checking if MPI is enabled in Trilinos: MPI NOT ENABLED")
    SET(Trilinos_Testing_MPI FALSE)
ENDIF()
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_subdirectory(src)

